Fixes navigation alignment issue, ticket DT-702

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -149,7 +149,6 @@ footer.bk-footer h2 {
         .clearfix;
         ul {
             width: 100%;
-            text-align: center;
             @media @tablet {
                 padding-top: 0;
             }
